--- a/mokepon.html
+++ b/mokepon.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <section id="seleccionar-mascota">
-            <h1 class="titulo">MOKEPON!🔥💧🌱</h1>
+            <h1 class="titulo">TOYPON!🔥💧🌱</h1>
 
             <h2 class="subtitulo">Elegí a tu personaje:</h2>
 
