--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>MOKEPON!</title>
-        <link rel="stylesheet" href="./estilos.css" />
+        <link rel="stylesheet" href="/estilos.css" />
     </head>
     <body>
         <section id="seleccionar-mascota">
@@ -66,6 +66,6 @@
                 </div>
             </div>
         </section>
-        <script src="./js/mokepon.js"></script>
+        <script src="/js/mokepon.js"></script>
     </body>
 </html>
