--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h2 class="nombres">Tú</h2>
                     <img id="imagen-jugador" src="">
                 </div>
-                <img src="./fotos/vs.png" alt="versus">
+                <img src="fotos/vs.png" alt="versus">
                 <div class="combate-enemigo">
                     <h2 class="nombres">Enemigo</h2>
                     <img id="imagen-enemigo" src="">
