--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
 
         <section id="seleccionar-ataque">
-            <h1 class="titulo">MOKEPON!🔥💧🌱</h1>
+            <h1 class="titulo">TOYPON!🔥💧🌱</h1>
 
             <div class="imagenes-combate">
                 <div class="combate-jugador">
