--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
                 </div>
             </div>
         </section>
-        <script src="js/mokepon.js"></script>
+        <script src="js/toypon.js"></script>
     </body>
 </html>
