--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div>
                 <div id="mensajes">  
-                    <p id="resultado">Suerte🤞🍀</p>
+                    <p id="resultado">Buena suerte🤞🍀</p>
 
                     <section id="reiniciar">
                         <button id="boton-reiniciar">Reiniciar</button>
