--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
 
             <h2 class="subtitulo">Elegí tu ataque:</h2>
 
-            <div class="tarjetas-ataques">
-                <button id="boton-fuego" class="boton-ataque">Fuego🔥</button>
-                <button id="boton-agua" class="boton-ataque">Agua💧</button>
-                <button id="boton-tierra" class="boton-ataque">Tierra🌱</button>
+            <div id="contenedor-ataques" class="tarjetas-ataques">
             </div>
 
             <div>
