--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <button id="boton-mascota">Seleccionar</button>
         </section>
 
+        <section id="ver-mapa">
+            <h1 class="titulo">Recorre el mapa con tu Toypon!</h1>
+            <canvas id="mapa"></canvas>
+        </section>
+
         <section id="seleccionar-ataque">
             <h1 class="titulo">TOYPON!🔥💧🌱</h1>
 
