--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <section id="ver-mapa">
             <h1 class="titulo">Recorre el mapa con tu Toypon!</h1>
             <canvas id="mapa"></canvas>
+            <button onClick="moverWoody()">Mover</button>
         </section>
 
         <section id="seleccionar-ataque">
