--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <section id="ver-mapa">
             <h1 class="titulo">Recorre el mapa con tu Toypon!</h1>
             <canvas id="mapa"></canvas>
-            <button onClick="moverWoody()">Mover</button>
+            <button onmouseup="detenerMovimiento()" onmousedown="moverArriba()">Arriba</button>
+            <button onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">Izquierda</button>
+            <button onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Abajo</button>
+            <button onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">Derecha</button>
         </section>
 
         <section id="seleccionar-ataque">
