--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         </section>
 
         <section id="ver-mapa">
-            <h2 class="subtitulo">Recorre el mapa con tu Toypon!</h2>
+            <div class="sub-mapa">
+                <h2 id="sub-mapa1" class="subtitulo">Recorre el mapa con tu</h2>
+                <h2 id="sub-mapa2" class="subtitulo">Toypon!</h2>
+            </div>
             <canvas id="mapa"></canvas>
             <button onmouseup="detenerMovimiento()" onmousedown="moverArriba()">Arriba</button>
             <div>
