--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <h2 id="sub-mapa2" class="subtitulo">Toypon!</h2>
             </div>
             <canvas id="mapa"></canvas>
-            <button onmouseup="detenerMovimiento()" onmousedown="moverArriba()">Arriba</button>
+            <button id="mover-arriba" onmouseup="detenerMovimiento()" onmousedown="moverArriba()">⬆</button>
             <div>
-                <button onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">Izquierda</button>
-                <button onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Abajo</button>
-                <button onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">Derecha</button>
+                <button id="mover-izquierda" onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">⬅</button>
+                <button id="mover-abajo" onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">⬇</button>
+                <button id="mover-derecha" onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">➡</button>
             </div>
         </section>
 
