--- a/publico/index.html
+++ b/publico/index.html
@@ -77,6 +77,6 @@
                 </div>
             </div>
         </section>
-        <script src="toypon.js"></script>
+        <script src="/toypon.js"></script>
     </body>
 </html>
